# data-flow-analyzer

./: .gitignore  README.md  cfg.sh  dfg.sh  draw.py  draw_test.py  inter.sh  intra.sh
app_Makefile/: Makefile
example/test/: 00test.cpp  01Loop.cpp  02Seidel.cpp
example/wrf/: wrf_analyze.sh
src/: CMakeLists.txt  DFG.cpp  loop_mem_pat_node.h  loop_unroll_analysis.h  pattern.h
